# secureqa-orchestrator

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  system.md
config/: app_config.yaml  settings.py  target_allowlist.json
core/: llm_client.py  logging_config.py  models.py  safety.py  storage.py
core/api_security/: __init__.py  exceptions.py  models.py  test_models.py
core/api_security/execution/: __init__.py  aggregator.py  auth_context.py  llm_classifier.py  llm_explainer.py  models.py  orchestrator.py  rule_classifier.py  runner.py
core/api_security/generators/: __init__.py  api1_bola.py  api2_broken_auth.py  api3_property_auth.py  api4_resource_consumption.py  api5_function_auth.py  api7_ssrf.py  api8_misconfiguration.py  api9_inventory.py  base.py  llm_helper.py  registry.py
core/exporters/: __init__.py  base.py  clickup_exporter.py  csv_exporter.py  markdown_exporter.py
tabs/: ai_fuzzing.py  api_security.py  ui_security.py
tabs/api_security_components/: __init__.py  findings_section.py  history_sidebar.py  input_panel.py  progress_section.py  settings_expander.py
tests/: conftest.py  test_exporters.py  test_llm_client.py  test_models.py  test_safety.py  test_storage.py
tests/api_security/: test_auto_detect.py  test_exceptions.py  test_integration.py  test_models.py  test_openapi_parser.py  test_parser_base.py  test_phase_1c_public_api.py  test_postman_parser.py
tests/exporters/: test_csv_exporter.py  test_markdown_exporter.py
tools/: mock_target.py
(+40 files in other folders)
