[project]
name = "secureqa-orchestrator"
version = "0.1.0"
description = "Security testing orchestrator for QA engineers"
requires-python = ">=3.11"
authors = [{name = "Md Yusuf Ahmed", email = "yusufahmed.sdet@gmail.com"}]
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["core", "config"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
